<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0  http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.memoria</groupId>
        <artifactId>jbom</artifactId>
        <version>20.2.0</version>
    </parent>

    <!--suppress MavenRedundantGroupId -->
    <groupId>io.memoria</groupId>
    <artifactId>reactive</artifactId>
    <version>0.371.0</version>
    <packaging>pom</packaging>

    <name>${project.groupId}.${project.artifactId}</name>
    <description>Reactive Java utilities</description>
    <url>https://memoria.io</url>
    <organization>
        <name>memoria.io</name>
        <url>https://memoria.io</url>
    </organization>

    <modules>
        <module>core</module>
        <module>text</module>
        <module>sec</module>
        <module>web</module>
    </modules>

    <properties>
        <maven.compiler.source>18</maven.compiler.source>
        <maven.compiler.target>18</maven.compiler.target>
        <reactor.version>2020.0.19</reactor.version>
        <vavr.version>0.10.4</vavr.version>
        <vavr-jackson.version>0.10.3</vavr-jackson.version>
        <jsonwebtoken.version>0.11.5</jsonwebtoken.version>
    </properties>

    <distributionManagement>
        <site>
            <id>${project.artifactId}-site</id>
            <url>ftp://memoria.io/</url>
        </site>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/memoria-io/reactive</url>
        </repository>
    </distributionManagement>
    <repositories>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/memoria-io/*</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
    <dependencyManagement>
        <dependencies>
            <!--======================================================================================== -->
            <!-- Reactive Dependencies -->
            <!--======================================================================================== -->
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-bom</artifactId>
                <version>${reactor.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>io.vavr</groupId>
                <artifactId>vavr</artifactId>
                <version>${vavr.version}</version>
            </dependency>
            <dependency>
                <groupId>io.vavr</groupId>
                <artifactId>vavr-jackson</artifactId>
                <version>${vavr-jackson.version}</version>
            </dependency>
            <!--======================================================================================== -->
            <!-- Json Dependencies -->
            <!--======================================================================================== -->
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>2.13.3</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <!--======================================================================================== -->
            <!-- Security Dependencies -->
            <!--======================================================================================== -->
            <dependency>
                <groupId>de.mkammerer</groupId>
                <artifactId>argon2-jvm</artifactId>
                <version>2.11</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jsonwebtoken.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jsonwebtoken.version}</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jsonwebtoken.version}</version>
                <scope>runtime</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <dependencies>
        <!--======================================================================================== -->
        <!-- Reactive Dependencies -->
        <!--======================================================================================== -->
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
        <!--======================================================================================== -->
        <!-- Functional Dependencies -->
        <!--======================================================================================== -->
        <dependency>
            <groupId>io.vavr</groupId>
            <artifactId>vavr</artifactId>
        </dependency>
        <!--======================================================================================== -->
        <!-- Testing Dependencies -->
        <!--======================================================================================== -->

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>18</source>
                    <target>18</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
